--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"bl": "^1.2.3",
 		"chalk": "^4.0.0",
 		"gulp-plumber": "^1.2.1",
 		"gulp-wait": "0.0.2",
+		"http-proxy": "^1.18.1",
 		"moment": "^2.25.3",
-		"node-fetch": "^2.2.0",
+		"node-fetch": "^2.6.1",
 		"node-notifier": "^7.0.0",
-		"nodejs-base64": "^1.0.3"
+		"nodejs-base64": "^1.0.3",
+		"yargs-parser": "^13.1.2"
 	},
 	"devDependencies": {
 		"bootstrap": "^4.4.1",
@@ -32,6 +35,6 @@
 		"gulp-sass": "^4.1.0",
 		"gulp-stylus": "^2.7.0",
 		"gulp-uglify-es": "^2.0.0",
-		"lodash.template": ">=4.5.0"
+		"lodash": ">=4.17.19"
 	}
 }
